modif pom.xml